--- a/inc/CJForm.css
+++ b/inc/CJForm.css
@@ -25,13 +25,17 @@ h2.CJH{
 	width:300px;
 }
 
+/*.CJButton{
+	position: absolute;	
+}
+*/
 td.CJTdButtons{
-  text-align:center;
+  text-align:right;
 }
 	
 td.CJTdButtons input{
-  margin: 30px 15px;
-  width:100px;
+  margin: 30px 0 0 30px;
+  min-width:120px;
 }
 	
 .CJHr{
@@ -54,5 +58,39 @@ td.CJTdButtons input{
   width:205px;
 }
 
+/* Navigation */
+nav.CJTdNavLinks{
+	position : absolute;
+	top: 90px;
+	width:800px;
+	height: 55px;
+	color: #6cace4;
+}
+
+.CJNavLi.done{
+	color: #012169;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.CJNavLi.current{
+	color: #012169;
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+.CJTdNavLinks ul{
+	padding: 5px;
+	text-align: center;
+}
+
+.CJTdNavLinks li{
+	display: inline-block;
+	margin: 0 10px;
+}
 
 
+footer{
+	position: absolute;
+  	width:800px;
+}
