--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 body {
   width: 800px;
 	font-family: garamond;
-  font-size:12pt;
+  font-size:10pt;
   margin: auto;
 }
 
@@ -26,7 +26,7 @@ h2{
 /* Header */
 header {
   display:block;
-  position: fixed;
+  position: absolute;
   top: 0;
   height: 82px;
   width:100%;
@@ -36,14 +36,14 @@ header {
 
 #logo{
   display:block;
-  position: fixed;
+  position: absolute;
   top: 18px;
   margin-left:10px;
 }
 
 #title {
   display:block;
-  position: fixed;
+  position: absolute;
   top: 20px;
   width: 740px;
   text-align:right;
@@ -53,7 +53,7 @@ header {
 
 #flag {
   display:block;
-  position: fixed;
+  position: absolute;
   top: 24px;
   width: 790px;
   text-align:right;
