Termine la création du PDF, corrige erreur sélection nombre de micros

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 body {
   width: 800px;
 	font-family: "garamond";
-  font-size:10pt;
+  font-size:11.5pt;
   margin: auto;
 }
 
@@ -29,7 +29,6 @@ header {
   position: absolute;
   top: 0;
   height: 82px;
-  width:100%;
   background: #FFF;
   z-index: 10;
 }
@@ -41,20 +40,25 @@ header {
   margin-left:10px;
 }
 
-#title {
+#title,#subtitle {
   display:block;
   position: absolute;
   top: 20px;
-  width: 740px;
+  width: 745px;
   text-align:right;
-	color:#014890;
+  color:#014890;
   font-size: 1.4em;  
-	}
+}
+
+#subtitle {
+  top: 45px;
+  font-size: 1.2em;  
+}
 
 #flag {
   display:block;
   position: absolute;
-  top: 24px;
+  top: 25px;
   width: 790px;
   text-align:right;
 	}
@@ -87,24 +91,4 @@ tr {
 .result {
 	font-weight:bold;
 	color:#000;
-	}
-
-	
-@media print {
-	body {
-		margin: 10px 10px 0px 10px;
-		font-family: times;
-		font-size:11pt;
-		}
-	h1 {
-		font-size:16pt;
-		}
-
-	h2 {
-		font-size:12pt;
-		}
-
-	.noprint {
-		display:none;
-		}
 	}
